--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">Car</li>
+		<li data-ns-test="shoppingList">House</li>
+		<li data-ns-test="shoppingList">Bank</li>
+	</ol>
+
+	<ul>
+		<li data-ns-test="shoppingList">Car</li>
+		<li data-ns-test="shoppingList">House</li>
+		<li data-ns-test="shoppingList">Bank</li>
+	</ul>
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
