--- a/main.html
+++ b/main.html
@@ -15,9 +15,9 @@
 	</ol>
 
 	<ul>
-		<li data-ns-test="shoppingList">Car</li>
-		<li data-ns-test="shoppingList">House</li>
-		<li data-ns-test="shoppingList">Bank</li>
+		<li data-ns-test="holidayList">Italy</li>
+		<li data-ns-test="holidayList">Germany</li>
+		<li data-ns-test="holidayList">Australia</li>
 	</ul>
 
 	
